Eclipse1/SalesforceCI/ Enterprise/objects/CYS_Category__c.object
<CustomObject>
    <description>A category which can be applied to multiple Training Courses.</description>
    <fields>
        <fullName>Category_Name__c</fullName>
        <description>The category name.</description>
        <label>Category Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>&quot;#FFFFFF&quot;</defaultValue>
        <description>Hexadecimal representation of the category label color.</description>
        <label>Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country code, to display a flag next to categories.</description>
        <label>Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The order it displays. 0 is highest priority.</description>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Unique ID in CYS.</description>
        <externalId>true</externalId>
        <label>CYSID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide the category from displaying.</description>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent category that contains this category. Otherwise it is at the root.</description>
        <label>Parent Category</label>
        <referenceTo>CYS_Category__c</referenceTo>
        <relationshipLabel>Sub-Categories</relationshipLabel>
        <relationshipName>CYS_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_URL__c</fullName>
        <description>The quick URL for this category, relative to main category URL.</description>
        <label>Quick URL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of content this category is for.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CYS Category</label>
    <nameField>
        <displayFormat>CAT-{000000}</displayFormat>
        <label>CYS Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CYS Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>